feat: 動態產生表格並將內容放入

--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -34,32 +34,7 @@
       </select>
     </div>
     <div class="tableForGrades mt-3">
-      <table class="table align-middle table-borderless" id="courseTable">
-        <thead class="table-dark">
-          <tr>
-            <td>課號</td>
-            <td>課程名稱</td>
-            <td>學期成績</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>CSB011</td>
-            <td>資料結構</td>
-            <td>79</td>
-          </tr>
-          <tr>
-            <td>CSB042</td>
-            <td>數位電路實驗</td>
-            <td>80</td>
-          </tr>
-          <tr>
-            <td>CSB061</td>
-            <td>工程數學</td>
-            <td>76</td>
-          </tr>
-        </tbody>
-      </table>
+      <table class="table align-middle table-borderless" id="courseTable"></table>
     </div>
     <div class="totalScore d-flex">
       <span class="bg-light">總學分</span>
