fixed: 表格字數會跑版

--- a/public/style/css/grades.css
+++ b/public/style/css/grades.css
@@ -176,6 +176,13 @@ body {
     background-color: transparent;
 }
 
+.wid-90 {
+    width: 90px;
+}
+
+.wid-60 {
+    width: 60px;
+}
 
 
 /*--------------------------------------------------------*/
