--- a/public/style/css/feat_courses.css
+++ b/public/style/css/feat_courses.css
@@ -228,3 +228,81 @@ td {
   padding: 4px;
   height: 137px;
 }
+
+.name{
+  color: darkgray;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 10px;
+  
+}
+
+.Load {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  position: absolute;
+  /* top: 40px; */
+}
+
+.loading {
+  display: inline-block;
+  background-color: transparent;
+  height: 40px;
+  width: 40px;
+  z-index: 1001;
+  animation: loading 2s infinite ease;
+  border-radius: 100%;
+  border: 5px inset #7381a0;
+}
+
+.loading-inner {
+  display: inline-block;
+  width: 100%;
+  animation: loading-inner 2s infinite ease-in;
+}
+
+@keyframes loading {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  25% {
+      transform: rotate(180deg);
+  }
+
+  50% {
+      transform: rotate(180deg);
+  }
+
+  75% {
+      transform: rotate(360deg);
+
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+@keyframes loading-inner {
+  0% {
+      height: 0%;
+  }
+
+  25% {
+      height: 0%;
+  }
+
+  50% {
+      height: 100%;
+  }
+
+  75% {
+      height: 100%;
+  }
+
+  100% {
+      height: 0%;
+  }
+}
