fixed: #2 完成事項4跟6

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -122,9 +122,6 @@
       </tr>
     </table>
     <div id="containerForWeek">
-      <div class="Load"><span class="loading">
-        <span class="loading-inner"></span>
-    </span></div>
       <table class="table weekday effect" id="weekday">
         <tr>
           <td>Mon.</td>
@@ -147,6 +144,9 @@
         </tr>
         <% } %>
       </table>
+      <div class="Load" id="Load"><span class="loading">
+          <span class="loading-inner"></span>
+        </span></div>
     </div>
     <div id="containerForWeekend">
       <table class="table weekend effect" id="weekend" style="opacity: 0">
