--- a/public/style/css/feat_courses.css
+++ b/public/style/css/feat_courses.css
@@ -105,7 +105,6 @@ td {
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
-
 }
 
 #containerForWeekend {
@@ -135,7 +134,7 @@ td {
 #weekday tr td {
   padding: 4px;
   width: 110px;
-  height: 70px;
+  height: 69px;
   border-bottom: 1px solid darkgrey;
 }
 
@@ -159,7 +158,7 @@ td {
 #weekend tr td {
   padding: 4px;
   width: 160px;
-  height: 70px;
+  height: 69px;
   border-bottom: 1px solid darkgrey;
 }
 
@@ -229,12 +228,11 @@ td {
   height: 137px;
 }
 
-.name{
+.name {
   color: darkgray;
   font-size: 14px;
   font-weight: bold;
   margin-top: 10px;
-  
 }
 
 .Load {
@@ -242,7 +240,8 @@ td {
   width: 100vw;
   justify-content: center;
   position: absolute;
-  /* top: 40px; */
+  top: 50%;
+  left: 0;
 }
 
 .loading {
@@ -264,45 +263,45 @@ td {
 
 @keyframes loading {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   25% {
-      transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 
   50% {
-      transform: rotate(180deg);
+    transform: rotate(180deg);
   }
 
   75% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
 
   }
 
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes loading-inner {
   0% {
-      height: 0%;
+    height: 0%;
   }
 
   25% {
-      height: 0%;
+    height: 0%;
   }
 
   50% {
-      height: 100%;
+    height: 100%;
   }
 
   75% {
-      height: 100%;
+    height: 100%;
   }
 
   100% {
-      height: 0%;
+    height: 0%;
   }
 }
