--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -34,6 +34,8 @@
     </div>
     <div class="score d-flex">
       <div class="currScore">
+        <h5>實得 / 應得</h5>
+        <h6>學分</h6>
         <div class="outer">
           <svg width="100" height="100">
             <defs>
@@ -45,31 +47,15 @@
             <circle cx="50" cy="50" r="50"></circle>
           </svg>
           <div class="inner">
-            <div id="currNumber">
-              <span>%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="goalScore">
-        <div class="outer">
-          <svg width="100" height="100">
-            <defs>
-              <linearGradient id="GradientColor2">
-                <stop offset="0%" stop-color="#a8edea" />
-                <stop offset="100%" stop-color="#fed6e3" />
-              </linearGradient>
-            </defs>
-            <circle cx="50" cy="50" r="50"></circle>
-          </svg>
-          <div class="inner">
-            <div id="goalNumber">
-              <span>%</span>
-            </div>
+            <div class="curr" id="currNumber">21</div>
+            <span class="divide">/</span>
+            <div class="goal" id="goalNumber">24</div>
           </div>
         </div>
       </div>
       <div class="totalScore">
+        <h5>當前 / 目標</h5>
+        <h6>學分</h6>
         <div class="outer">
           <svg width="100" height="100">
             <defs>
@@ -81,9 +67,9 @@
             <circle cx="50" cy="50" r="50"></circle>
           </svg>
           <div class="inner">
-            <div id="totalNumber">
-              <span>%</span>
-            </div>
+            <div class="curr" id="totalNumber">88</div>
+            <span class="divide">/</span>
+            <div class="goal" id="totalNumber1">128</div>
           </div>
         </div>
       </div>
