--- a/public/style/css/grades.css
+++ b/public/style/css/grades.css
@@ -58,6 +58,7 @@ body {
     margin: 0 auto;
     border-radius: 20px;
     height: 4vh;
+    text-align: center;
     background: linear-gradient(to right, #183168, #8e9cbb);
     cursor: pointer;
     box-shadow: 2px 2px 8px #383837;
@@ -74,76 +75,6 @@ body {
     color: #d4d9e4;
     cursor: pointer;
     background-color: #455a88;
-}
-
-/*--------------------------------------------------------*/
-.Load {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    position: absolute;
-    /* top: 40px; */
-}
-
-.loading {
-    display: inline-block;
-    background-color: transparent;
-    border: 5px inset #7381a0;
-    height: 40px;
-    width: 40px;
-    z-index: 1001;
-    animation: loading 2s infinite ease;
-    border-radius: 100%;
-}
-
-.loading-inner {
-    display: inline-block;
-    width: 100%;
-    animation: loading-inner 2s infinite ease-in;
-}
-
-@keyframes loading {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    25% {
-        transform: rotate(180deg);
-    }
-
-    50% {
-        transform: rotate(180deg);
-    }
-
-    75% {
-        transform: rotate(360deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes loading-inner {
-    0% {
-        height: 0%;
-    }
-
-    25% {
-        height: 0%;
-    }
-
-    50% {
-        height: 100%;
-    }
-
-    75% {
-        height: 100%;
-    }
-
-    100% {
-        height: 0%;
-    }
 }
 
 /*--------------------------------------------------------*/
@@ -288,11 +219,68 @@ svg {
 }
 
 @keyframes anime {
-    0%{
+    0% {
         stroke-dashoffset: 0;
         stroke-dasharray: 0;
     }
+
     100% {
         stroke-dashoffset: 78.5;
+    }
+}
+
+/*------------------------------------*/
+
+
+.Load {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading {
+    position: relative;
+    width: 90px;
+    height: 90px;
+}
+
+.loading span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotate(calc(18deg * var(--i)));
+}
+
+.loading span::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background: aliceblue;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #183168,
+        0 0 20px #183168,
+        0 0 40px #183168,
+        0 0 60px #183168,
+        0 0 80px #183168,
+        0 0 100px #183168;
+    animation: animateElement 2s linear infinite;
+    animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes animateElement {
+    0% {
+        transform: scale(1);
+    }
+
+    80%,
+    100% {
+        transform: scale(0);
     }
 }
