--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -56,6 +56,20 @@
     <div class="tableForGrades mt-3">
       <table class="table align-middle table-borderless" id="courseTable"></table>
     </div>
+    <div class="totalData">
+      <div class="totalRank">
+        <h6>總排名</h6>
+        <div class="rank" id="rank"></div>
+      </div>
+      <div class="avgScore">
+        <h6>總平均分數</h6>
+        <div class="avg" id="avg"></div>
+      </div>
+      <div class="totalCredit">
+        <h6>總實得學分</h6>
+        <div class="credit" id="credit"></div>
+      </div>
+    </div>
     <div class="score d-flex">
       <div class="currScore">
         <h5>實得 / 應得</h5>
@@ -74,26 +88,6 @@
             <div class="curr" id="currNumber">21</div>
             <span class="divide">/</span>
             <div class="goal" id="goalNumber">24</div>
-          </div>
-        </div>
-      </div>
-      <div class="totalScore">
-        <h5>當前 / 目標</h5>
-        <h6>學分</h6>
-        <div class="outer">
-          <svg width="100" height="100">
-            <defs>
-              <linearGradient id="GradientColor3">
-                <stop offset="0%" stop-color="#a1c4fd" />
-                <stop offset="100%" stop-color="#c2e9fb" />
-              </linearGradient>
-            </defs>
-            <circle cx="50" cy="50" r="50"></circle>
-          </svg>
-          <div class="inner">
-            <div class="curr" id="totalNumber">88</div>
-            <span class="divide">/</span>
-            <div class="goal" id="totalNumber1">128</div>
           </div>
         </div>
       </div>
