--- a/public/style/css/feat_courses.css
+++ b/public/style/css/feat_courses.css
@@ -25,13 +25,11 @@
   cursor: pointer;
   transition: all 1s ease;
   background-color: #FFC107;
-  /* background-color: #b0b7b4; */
   box-shadow: 1px 1px 10px 1px rgba(138, 136, 136, 0.5),
     -1px -1px 10px 1px rgba(138, 136, 136, 0.5), 0px 3px 10px 1px dimgray;
 }
 
 .btn-effect:active {
-  /* background-color: #2825e0; */
   color: #FFC107;
   background-color: transparent;
 }
@@ -235,73 +233,57 @@ td {
   margin-top: 10px;
 }
 
+/*----------------------------------------------------*/
 .Load {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  width: 100vw;
   justify-content: center;
+  align-items: center;
   position: absolute;
-  top: 50%;
-  left: 0;
 }
 
 .loading {
-  display: inline-block;
-  background-color: transparent;
-  height: 40px;
-  width: 40px;
-  z-index: 1001;
-  animation: loading 2s infinite ease;
-  border-radius: 100%;
-  border: 5px inset #7381a0;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
 
-.loading-inner {
-  display: inline-block;
+.loading span {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  animation: loading-inner 2s infinite ease-in;
+  height: 100%;
+  transform: rotate(calc(18deg * var(--i)));
 }
 
-@keyframes loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  25% {
-    transform: rotate(180deg);
-  }
-
-  50% {
-    transform: rotate(180deg);
-  }
-
-  75% {
-    transform: rotate(360deg);
-
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+.loading span::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background: aliceblue;
+  border-radius: 50%;
+  box-shadow: 0 0 10px #183168,
+    0 0 20px #183168,
+    0 0 40px #183168,
+    0 0 60px #183168,
+    0 0 80px #183168,
+    0 0 100px #183168;
+  animation: animateElement 2s linear infinite;
+  animation-delay: calc(0.1s * var(--i));
 }
 
-@keyframes loading-inner {
+@keyframes animateElement {
   0% {
-    height: 0%;
+    transform: scale(1);
   }
 
-  25% {
-    height: 0%;
-  }
-
-  50% {
-    height: 100%;
-  }
-
-  75% {
-    height: 100%;
-  }
-
+  80%,
   100% {
-    height: 0%;
+    transform: scale(0);
   }
 }
