fixed: loading結束要出現課表

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -24,7 +24,7 @@
 
 
   <div class="wrap" id="Wrap">
-    <div class="Load">
+    <div class="Load" id="Load">
       <div class="loading" id="loading">
         <span style="--i:1;"></span>
         <span style="--i:2;"></span>
