--- a/public/style/css/grades.css
+++ b/public/style/css/grades.css
@@ -120,7 +120,7 @@ body {
 .score {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-end;
     padding-bottom: 10px;
 }
 
@@ -209,6 +209,22 @@ svg {
     font-weight: bold;
     font-size: 18px;
     color: rgb(218, 24, 56);
+}
+
+.semesterScore circle {
+    stroke-width: 25px;
+    stroke: url(#GradientColor2);
+    stroke-dashoffset: 78.5;
+    fill: none;
+}
+
+.semester {
+    position: absolute;
+    top: 22px;
+    left: 15px;
+    font-weight: bold;
+    font-size: 18px;
+    color: #4483a0;
 }
 
 /*------------------------------------*/
