--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -85,9 +85,26 @@
             <circle cx="50" cy="50" r="50"></circle>
           </svg>
           <div class="inner">
-            <div class="curr" id="currNumber">21</div>
+            <div class="curr" id="currNumber"></div>
             <span class="divide">/</span>
-            <div class="goal" id="goalNumber">24</div>
+            <div class="goal" id="goalNumber"></div>
+          </div>
+        </div>
+      </div>
+      <div class="semesterScore">
+        <h5 class="pb-3">平均分數</h5>
+        <div class="outer">
+          <svg width="100" height="100">
+            <defs>
+              <linearGradient id="GradientColor2">
+                <stop offset="0%" stop-color="#88d3ce" />
+                <stop offset="100%" stop-color="#6e45e2" />
+              </linearGradient>
+            </defs>
+            <circle cx="50" cy="50" r="50"></circle>
+          </svg>
+          <div class="inner">
+            <div class="semester" id="currSemester">80.88</div>
           </div>
         </div>
       </div>
