--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -70,6 +70,9 @@
         <div class="credit" id="credit"></div>
       </div>
     </div>
+    <div class="semesterRank" id="semesterRank">
+      <h4>系排 : <span>18</span></h4>
+    </div>
     <div class="score d-flex">
       <div class="currScore">
         <h5>實得 / 應得</h5>
