--- a/public/style/css/grades.css
+++ b/public/style/css/grades.css
@@ -88,7 +88,7 @@ body {
     font-weight: bold;
     border-right: 1px solid whitesmoke;
     border-left: 1px solid whitesmoke;
-    text-align: left;
+    text-align: center;
 }
 
 .tableForGrades .table tbody td {
